  - Vario center gross label
  - Vario use AutoFonts for lables and values
  - Replace eventOrientation by two new events: eventOrientationCruise and eventOrientationCircling
  - New artificial horizon
* devices
  - add Larus driver
* windows
 - black text color in airspace list like all other systems
* Kobo
  - fix Wifi configuration
  - fix oversized icons

Version 7.42 - 2024/03/01
* ui
  - new terrain ramp High Contrast
  - fix unreadable icons in task manager and status dialog
  - render icons at 300 dpi
* data files
  - fix bogus "Latin-1 to UTF-8 conversion failed" error
  - parse elevations in feet correctly in cup files
  - ignore unit for radio frequency in airspace files
* devices
  - validate wind direction
* Kobo
  - Wifi setup, display signal level in dBm for new models
  - scale icons on hi-dpi displays (e.g. Clara HD)
* user interface
  - new mountain pass and bridge icons
* Android
  - update 'white list' of USB devices with more PIDs for SoftRF Academy

Version 7.41 - 2023/12/21
* data files
  - fix crash with empty user.cup
* Android
  - fix BLE/HM10 data corruption
  - fix crash if IOIO connect was canceled quickly
  - fix crash if not allowed to start service in foreground
* Kobo
  - fix Wifi setup (7.40 breakage)
  - hide all pseudo tty ports

Version 7.40 - 2023/11/02
* user interface
  - Added infobox that combines ETA with AAT dT
  - FLARM: Add 100m zoom option.
  - hide mouse cursor after 10 seconds of inactivity
  - Move glider icon on thermal assist according to 30s average.
* Linux
  - fix the /etc/xcsoar data directory
* Android
  - raise targetSdkVersion to 33

Version 7.39 - 2023/07/28
* Android
  - fix Bluetooth device list on Android versions older than 12
  - do not request permission WRITE_EXTERNAL_STORAGE on Android 11 or newer

Version 7.38 - 2023/07/27
* WeGlide
  - fix another crash bug
* Android
  - support scanning QR codes with XCTrack tasks
  - fix location permission request on old Android versions