@@ -18,6 +18,8 @@ Version 7.43 - not yet released
 * Kobo
   - fix Wifi configuration
   - fix oversized icons
+* airspace
+  - add classes according the OpenAir extended format AY tag
 
 Version 7.42 - 2024/03/01
 * ui
